test/tests/compiler/5_local_variables/valid/use_val_in_own_initializer.plx
pub fn main(none) i32 {
    a: i32 = 0 and a
    return a
}
