test/tests/compiler/5_local_variables/invalid_semantics/extra_credit/undeclared_compound_assignment.plx
pub fn main(none) i32 {
    a += 1
    return 0
}
